# wit

./: .gitignore  Cargo.toml  README.md  justfile
doc/design/: architecture-concept1.d2  architecture-concept2.d2  communication-protocol1.d2  design.typ
doc/paper/: bibliography.yml  paper.typ
doc/seminar/: presentation1.typ
docs/design/: design.typ
docs/paper/: bibliography.yml  diploma_template.typ  paper.typ  title_page.typ  title_page_pl.typ
docs/paper/img/: architecture-concept-federated.d2  architecture-concept-non-federated.d2  client-server-communication.d2  implementation-components.d2  shared.d2  uri-resolution.d2  use-case-diagram.d2  user-interaction-outline.d2  wit-mnemonic.d2
docs/seminar/: architecture-simple.d2  presentation-template.typ  presentation2.typ  web-interaction.d2
src/wit-cli/: Cargo.toml
src/wit-client/: Cargo.toml
src/wit-client/src/: lib.rs
src/wit-server/: Cargo.toml
src/wit-server/src/: config.rs  file_data.rs  init.rs  lib.rs  main.rs  wiki_meta.rs
src/wit-server/src/file/: file_data.rs  local.rs  mod.rs  remote.rs
src/wit-server/src/git_storage/: mod.rs
src/wit-server/src/local/: file.rs  mod.rs
src/wit-server/src/remote/: file.rs
src/wit-server/src/server/: connected_peers.rs  get.rs  git_proxy.rs  mod.rs  p2p.rs
src/wit-server/src/server/link/: mod.rs
src/wit-server/src/server/p2p/: kad_client.rs  kad_store.rs  mod.rs  tables.rs
src/wit-server/src/server/render/: markdown.rs  mod.rs
src/wit-server/src/version/: mod.rs  tables.rs
tests/: Cargo.toml  common.rs  wit-server.rs
