[package]
name = "wit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vendored"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]

[dependencies]
git2 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7.1", features = ["tracing"] }