[package]
name = "wit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vendored"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]

[dependencies]
git2 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }
tokio-util = { version = "0.7.10", features = ["io"] }
axum = { version = "0.7.1", features = ["tracing", "macros", "http2"] }
markdown-it = { version = "0.6.0" }
tower-cgi = { git = "https://github.com/Adhalianna/tower-cgi", rev = "c1b71dd57e09e54254b3d00728a5df2a40ef507b", features = ["tracing"] }
tower = { version = "0.4.13" }
http = "1.0.0"
